--- a/index.html
+++ b/index.html
@@ -6,22 +6,38 @@
     <meta name="viewport" content="width=device-width">
     <base href="/learn/">
     <title>LEARN!</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    <link
+        rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <!-- <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script> -->
-    <!-- <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script> -->
+    <!-- <script
+        crossorigin
+        src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script
+        crossorigin
+        src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script> -->
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-transition-group/2.4.0/react-transition-group.js"
-        integrity="sha256-lgeYNDCyslbL5lbIXgoQJdNCcAE5lgSs0zoC1RTGIfs=" crossorigin="anonymous"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/react-transition-group/2.4.0/react-transition-group.min.js" integrity="sha256-MQA8cbX4lZSVFBAyIMmC8jIVgasEIWRw8wPJy/6R+b0=" crossorigin="anonymous"></script> -->
+    <!-- <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/react-transition-group/2.4.0/react-transition-group.js"
+        integrity="sha256-lgeYNDCyslbL5lbIXgoQJdNCcAE5lgSs0zoC1RTGIfs="
+        crossorigin="anonymous"></script> -->
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/react-transition-group/2.4.0/react-transition-group.min.js"
+        integrity="sha256-MQA8cbX4lZSVFBAyIMmC8jIVgasEIWRw8wPJy/6R+b0="
+        crossorigin="anonymous"></script>
 
-    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/reactstrap/4.8.0/reactstrap.min.js"></script>
+    <script
+        crossorigin
+        src="https://cdnjs.cloudflare.com/ajax/libs/reactstrap/4.8.0/reactstrap.min.js"></script>
 
-    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.8.6/showdown.min.js"></script>
+    <script
+        crossorigin
+        src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.8.6/showdown.min.js"></script>
 
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
@@ -34,13 +50,23 @@
             messageStyle: "none",
         });
     </script>
-    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=AM_CHTML"></script>
+    <script
+        type="text/javascript"
+        async
+        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=AM_CHTML"></script>
 </head>
 
 <body>
     <div id="vcs-root"></div>
-    <script src="./bundle.js"></script>
-    <!-- <script src="./bundle.min.js"></script> -->
+
+    <script type="text/javascript">
+        const script = document.createElement('script')
+        script.type = 'text/javascript'
+        script.src = location.host.match(/localhost/)
+            ? "./bundle.js"
+            : "./bundle.min.js"
+        document.body.appendChild(script)
+    </script>
 </body>
 
 </html>
