--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
             asciimath2jax: {
-                delimiters: [['$','$']],
+                delimiters: [['§','§']],
+            },
+            tex2jax: {
+                inlineMath: [['$','$']],
             },
             CommonHTML: { linebreaks: { automatic: true } },
             "HTML-CSS": { linebreaks: { automatic: true } },
@@ -53,7 +56,7 @@
     <script
         type="text/javascript"
         async
-        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=AM_CHTML"></script>
+        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 </head>
 
 <body>
