--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         async
         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 
+    <script src="https://unpkg.com/prettier@1.14.3/standalone.js"></script>
+    <script src="https://unpkg.com/prettier@1.14.3/parser-markdown.js"></script>
+
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
         // Single Page Apps for GitHub Pages
