--- a/src/index.html
+++ b/src/index.html
@@ -14,26 +14,26 @@
 		<link rel="stylesheet" href="style.css" />
 
 		<script
-			src="https://unpkg.com/react@16.8.6/umd/react.development.js"
+			src="https://unpkg.com/react@[version]/umd/react.[development:production.min].js"
 			crossorigin
 		></script>
 		<script
-			src="https://unpkg.com/react-dom@16.8.6/umd/react-dom.development.js"
+			src="https://unpkg.com/react-dom@[version]/umd/react-dom.[development:production.min].js"
 			crossorigin
 		></script>
 
 		<script
-			src="https://unpkg.com/react-transition-group@2.8.0/dist/react-transition-group.js"
+			src="https://unpkg.com/react-transition-group@[version]/dist/react-transition-group[:.min].js"
 			crossorigin="anonymous"
 		></script>
 
 		<script
-			src="https://unpkg.com/reactstrap@8.0.0/dist/reactstrap.js"
+			src="https://unpkg.com/reactstrap@[version]/dist/reactstrap[:.min].js"
 			crossorigin
 		></script>
 
 		<script
-			src="https://unpkg.com/showdown@1.9.0/dist/showdown.js"
+			src="https://unpkg.com/showdown@[version]/dist/showdown[:.min].js"
 			crossorigin
 		></script>
 
@@ -56,8 +56,8 @@
 			async
 		></script>
 
-		<script src="https://unpkg.com/prettier@1.16.4/standalone.js"></script>
-		<script src="https://unpkg.com/prettier@1.16.4/parser-markdown.js"></script>
+		<script src="https://unpkg.com/prettier@[version]/standalone.js"></script>
+		<script src="https://unpkg.com/prettier@[version]/parser-markdown.js"></script>
 
 		<!-- Start Single Page Apps for GitHub Pages -->
 		<script type="text/javascript">
@@ -104,6 +104,6 @@
 	<body>
 		<div id="vcs-root"></div>
 
-		<script src="bundle.js"></script>
+		<script src="bundle[:.min].js"></script>
 	</body>
 </html>
