generate integrity hashes in index.html

--- a/index.html
+++ b/index.html
@@ -15,25 +15,30 @@
 
 		<script
 			src="https://unpkg.com/react@16.8.6/umd/react.production.min.js"
+			integrity="sha512-yqSbY6G9B9aEfcZvzRruxq/J2h+kNCtT77vYv1sX9zBM+VLrNpoD69I9MjOI/szpG9PcIn+u6tgDGRPBJaOwKA=="
 			crossorigin
 		></script>
 		<script
 			src="https://unpkg.com/react-dom@16.8.6/umd/react-dom.production.min.js"
+			integrity="sha512-0uQJWYKqppuntnX/9xmazR1YADGh7MAficuBoyioWv37RUVN/ueAeXibDK+acJsa1AjkOtQXc3gO9j/Q3QRxjA=="
 			crossorigin
 		></script>
 
 		<script
 			src="https://unpkg.com/react-transition-group@2.9.0/dist/react-transition-group.min.js"
+			integrity="sha512-gRy/lpu0pduqL2lau/u63fbi+ukIpVbEOwWWZAsHfir1f+VsQ0GVyLNp3NkdWCXcmQGKTKpgAhzwmtuS5wLjMg=="
 			crossorigin="anonymous"
 		></script>
 
 		<script
 			src="https://unpkg.com/reactstrap@8.0.0/dist/reactstrap.min.js"
+			integrity="sha512-4xLQBWeeQR/ivKq51kyMABl8gMt1LOqRlw/7qFk96AVY8BPHM4fm1bOL/rI0EKnbrH+/T6lNqBvQLrBf+iUddA=="
 			crossorigin
 		></script>
 
 		<script
 			src="https://unpkg.com/showdown@1.9.0/dist/showdown.min.js"
+			integrity="sha512-LosNAEw0fryuQRIzlcifTONifMea2hPwQ58UGr/GbwAF48x2VDEPa2PEKClc49oljazuwmky3cgZzUXfTqYSkw=="
 			crossorigin
 		></script>
 
@@ -56,8 +61,16 @@
 			async
 		></script>
 
-		<script src="https://unpkg.com/prettier@1.16.4/standalone.js"></script>
-		<script src="https://unpkg.com/prettier@1.16.4/parser-markdown.js"></script>
+		<script
+			src="https://unpkg.com/prettier@1.16.4/standalone.js"
+			integrity="sha512-SUQ8bThTHL94+FrGj6J3ui9W1oFIjTrRhCmCq2Omff2hE1M0+IICv0EKsmAmPm+bVjPgTWakmbcmlw3zH1pyIg=="
+			crossorigin
+		></script>
+		<script
+			src="https://unpkg.com/prettier@1.16.4/parser-markdown.js"
+			integrity="sha512-xaEWuEHEHF4BXEg7VmR2wlHA358kqfYzDU78n/oiYh3FR1gZivpMTGezqXQykeTozMt+m0HtWKCnXasiKXla0A=="
+			crossorigin
+		></script>
 
 		<!-- Start Single Page Apps for GitHub Pages -->
 		<script type="text/javascript">
