--- a/src/index.html
+++ b/src/index.html
@@ -56,8 +56,14 @@
 			async
 		></script>
 
-		<script src="https://unpkg.com/prettier@[version]/standalone.js"></script>
-		<script src="https://unpkg.com/prettier@[version]/parser-markdown.js"></script>
+		<script
+			src="https://unpkg.com/prettier@[version]/standalone.js"
+			crossorigin
+		></script>
+		<script
+			src="https://unpkg.com/prettier@[version]/parser-markdown.js"
+			crossorigin
+		></script>
 
 		<!-- Start Single Page Apps for GitHub Pages -->
 		<script type="text/javascript">
